--- a/examples/aws-bun-layer/package.json
+++ b/examples/aws-bun-layer/package.json
@@ -1,18 +1,15 @@
 {
   "name": "aws-bun-layer",
-  "devDependencies": {
-    "@serverless-bun/layer": "0.1.0",
-    "@types/bun": "^1.1.0",
-    "serverless": "^3.38.0"
-  },
+  "type": "module",
   "scripts": {
     "sls": "sls",
     "build": "bun build ./src/handler.ts --outdir=dist",
     "predeploy": "bun run build",
     "deploy": "sls deploy"
   },
-  "type": "module",
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+  "devDependencies": {
+    "@serverless-bun/layer": "workspace:*",
+    "@types/bun": "^1.1.3",
+    "serverless": "^3.38.0"
   }
 }
